--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="">Settings</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/fanzone']" [routerLinkActive]="['is-active']">Fan Zone</a>
+          </li>
 
           <li class="nav-item">
               <button class="nav-link btn-link" [routerLink]="['/dashboard']" (click)="deleteActUser()"  >Logout</button>
