--- a/src/app/components/hotel-profile/hotel-profile.component.html
+++ b/src/app/components/hotel-profile/hotel-profile.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="container-fluid m-2">
 
 
@@ -22,3 +23,83 @@
 
   <app-map *ngIf="pomAdresa && pomDrz && pomGrad" [address]="pomAdresa" [city]="pomGrad" [state]="pomDrz"></app-map>
 </div>
+-->
+
+<!-- Profile Hotel -->
+<section class="content-section" id="portfolio">
+  <div class="container">
+    <div class="content-section-heading text-center">
+      <h3 class="text-secondary mb-0">Hotel</h3>
+      <h2 class="mb-5">{{hotel.name}}
+        <button class="btn btn-dark text-right" (click)="editHotel(hotel.id)"><i class="fa fa-edit" style="color: aliceblue"></i></button>
+      </h2>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        <a class="portfolio-item" href="#">
+          <span class="caption">
+            <span class="caption-content">
+              <h1 class="text-secondary mb-0">Informacije</h1>
+
+                 <p class="mb-0" *ngIf="hotel"><strong>Opis:</strong><i> {{hotel.desc}}</i></p>
+                 <p class="mb-0" *ngIf="hotel"><strong>Ocena:</strong><i> {{hotel.avgRating}}/5</i></p>
+                 <p class="mb-0" *ngIf="hotel"><strong>Adresa:</strong><i> {{hotel.address}}, {{hotel.city}}, {{hotel.country}}</i></p>
+
+            </span>
+          </span>
+          <img class="img-fluid" src="../../../assets/images/information.jpeg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-6">
+        <a class="portfolio-item" href="#">
+          <span class="caption">
+            <span class="caption-content">
+              <h1 class="text-secondary mb-0">Sobe</h1>
+              <p class="mb-0">Izaberite sobu iz nase ponude, u kojoj cete uzivati tokom svog boravka!</p>
+            </span>
+          </span>
+          <img class="img-fluid" src="../../../assets/images/room.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-6">
+        <a class="portfolio-item" href="#">
+          <span class="caption">
+            <span class="caption-content">
+              <h1 class="text-secondary mb-0">Rezervacija</h1>
+              <p class="mb-0">Rezervisite sobu vec sada i izaberite dodatne usluge u kojima cete uzivati!</p>
+            </span>
+          </span>
+          <img class="img-fluid" src="../../../assets/images/reservation.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-6">
+        <a class="portfolio-item" href="#">
+          <span class="caption">
+            <span class="caption-content">
+              <h1 class="text-secondary mb-0">Cenovnik usluga</h1>
+              <p class="mb-0">Mozete pogledati kompletan cenovnik nasih usluga.</p>
+            </span>
+          </span>
+          <img class="img-fluid" src="../../../assets/images/bell.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-lg-6">
+          <a class="portfolio-item" href="#">
+            <span class="caption">
+              <span class="caption-content">
+                <h1 class="text-secondary mb-0">Lokacija</h1>
+                   <p class="mb-0" *ngIf="hotel"><strong>Adresa:</strong><i> {{hotel.address}}, {{hotel.city}}, {{hotel.country}}</i></p>
+                   <p class="mb-0">Na mapi mozete detaljno pogledati nasu lokaciju, kao i ostale znamenitosti u nasem gradu.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="../../../assets/images/map.jpg" alt="">
+          </a>
+        </div>
+      <div class="col-lg-6">
+          <app-map *ngIf="pomAdresa && pomDrz && pomGrad" [address]="pomAdresa" [city]="pomGrad" [state]="pomDrz"></app-map>
+      </div>
+    </div>
+  </div>
+</section>
+
+
