edit hotel html stranica

--- a/src/app/components/add-hotel/add-hotel.component.html
+++ b/src/app/components/add-hotel/add-hotel.component.html
@@ -1,5 +1,5 @@
 <div class="container padding-top-10"> <!--da se smanji cela forma dodati ovde col-md-6" -->
-	<form [formGroup]="form" (ngSubmit)="addTheatreForm()">
+	<form [formGroup]="form" (ngSubmit)="addHotelForm()">
 		<div class="panel panel-default">
 			<div class="panel-heading" align="center">Hotel REGISTRATION</div>
 				<div class="panel-body">
