--- a/src/app/components/hotel-services/hotel-services.component.html
+++ b/src/app/components/hotel-services/hotel-services.component.html
@@ -1,3 +1,34 @@
-<p>
-  hotel-services works!
-</p>
+<div class="container">
+  <div class="row text-center">
+      <div class="col-md-12" style="margin-top: 20px;">
+          <div class="pricing-table">
+              <div class="panel panel-primary" style="border: none;">
+                  <div class="controle-header panel-heading panel-heading-landing">
+                      <h1 class="panel-title panel-title-landing">
+                          Servisi
+                      </h1>
+                  </div>
+                  <div class="controle-panel-heading panel-heading panel-heading-landing-box">
+                      Uredi servise
+                  </div>
+                  <div class="panel-body panel-body-landing">
+                      <table class="table" *ngIf="items">
+                          <tr *ngFor="let r of items">
+                              <td >{{r.name}}</td>
+                              <td >{{r.cost}}</td>
+                              <td>
+                                <button class="btn btn-dark" (click)="editHotelService(r.id)"><i class="fa fa-edit" style="color: aliceblue"></i></button>
+                                <button class="btn btn-secondary" (click)="deleteService(r.id)"><i class="fa fa-trash"  style="color: aliceblue"></i></button>
+                              </td>
+                          </tr>
+                      </table>
+                  </div>
+                  <div class="panel-footer panel-footer-landing">
+                      <button *ngIf="hotelId" class="btn btn-price btn-success btn-lg" (click)="addHotelService()">Dodaj</button>
+                      <button class="btn btn-price btn-secondary btn-lg" (click)="back()">Nazad</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
