--- a/src/app/components/hotel-profile/hotel-profile.component.html
+++ b/src/app/components/hotel-profile/hotel-profile.component.html
@@ -51,14 +51,14 @@
         </a>
       </div>
       <div class="col-lg-6">
-        <a class="portfolio-item" href="#">
+        <a class="portfolio-item" (click)="displayRooms()" >
           <span class="caption">
             <span class="caption-content">
               <h1 class="text-secondary mb-0">Sobe</h1>
               <p class="mb-0">Izaberite sobu iz nase ponude, u kojoj cete uzivati tokom svog boravka!</p>
             </span>
           </span>
-          <img class="img-fluid" src="../../../assets/images/room.jpg" alt="">
+          <img class="img-fluid" src="../../../assets/images/room.jpg" alt="room">
         </a>
       </div>
       <div class="col-lg-6">
