--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,3 +1,43 @@
-<p>
-  room works!
-</p>
+<div class="container-fluid" style="background-image:url('../../../assets/images/room.jpg');">
+  <table class="table table-dark tableRoom" *ngIf="rooms">
+    <thead>
+      <tr class="textRoom">
+        <th>Tip</th>
+        <th>Kapacitet</th>
+        <th>Sprat</th>
+        <th>Balkon</th>
+        <th>Cena za noc</th>
+        <th>Cena vazi od</th>
+        <th>Cena vazi do</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let r of rooms">
+      <td>{{r.roomType}}</td>
+      <td>{{r.capacity}}</td>
+      <td>{{r.floor}}</td>
+      <td>{{r.balkon}}</td>
+      <td>{{r.costPerNight}}</td>
+      <td>{{r.costValidFrom | date: 'dd/MM/yyyy'}} </td>
+      <td>{{r.costValidUntil | date: 'dd/MM/yyyy'}}</td>
+      <td *ngIf="!r.reserved">
+        <input type="checkbox">
+        <button (click)="editRoom(r.id)"><i class="fa fa-edit"></i></button>
+        <button (click)="deleteRoom(r.id)"><i class="fa fa-trash"></i></button>
+      </td>
+
+    </tr>
+    </tbody>
+
+    <tfoot>
+    <tr>
+      <td colspan="4"></td>
+      <td colspan="2">
+        <button class="btn btn-dark">Rezervisi</button>
+        <button *ngIf="hotelId" class="btn btn-dark" (click)="addNewRoom()">Dodaj sobu</button>
+      </td>
+    </tr>
+    </tfoot>
+  </table>
+</div>
