--- a/src/app/components/hotel-profile/hotel-profile.component.html
+++ b/src/app/components/hotel-profile/hotel-profile.component.html
@@ -36,7 +36,7 @@
     </div>
     <div class="row no-gutters">
       <div class="col-lg-6">
-        <a class="portfolio-item" href="#">
+        <a class="portfolio-item" >
           <span class="caption">
             <span class="caption-content">
               <h1 class="text-secondary mb-0">Informacije</h1>
@@ -84,7 +84,7 @@
         </a>
       </div>
       <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" >
             <span class="caption">
               <span class="caption-content">
                 <h1 class="text-secondary mb-0">Lokacija</h1>
