--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,15 +4,15 @@
 
 <div class="container" style="text-align: center;">
     <div class="col-md-4 d-inline-block">
-      <img src="../../../assets/images/flights.png" [routerLink]="['/cinemas']" [routerLinkActive]="['is-active']" class="img-circle" alt="Cinque Terre" width="304" height="236">
+      <img src="../../../assets/images/flights.png" [routerLink]="['/airlines']" [routerLinkActive]="['is-active']" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2 style="text-align: center;">Flights</h2>
     </div>
     <div class="col-md-4 d-inline-block">
-      <img src="../../../assets/images/hotels.png" [routerLink]="['/theatres']" class="img-circle" alt="Cinque Terre" width="304" height="236">
+      <img src="../../../assets/images/hotels.png" [routerLink]="['/hotels']" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2 style="text-align: center;">Hotels</h2>
     </div>
     <div class="col-md-4 d-inline-block">
-      <img src="../../../assets/images/cars.png" [routerLink]="['/theatres']" class="img-circle" alt="Cinque Terre" width="304" height="236">
+      <img src="../../../assets/images/cars.png" [routerLink]="['/dashboard']" class="img-circle" alt="Cinque Terre" width="304" height="236">
       <h2 style="text-align: center;">Cars</h2>
     </div>
 </div>
