--- a/src/app/components/add-airline-service/add-airline-service.component.html
+++ b/src/app/components/add-airline-service/add-airline-service.component.html
@@ -1,5 +1,5 @@
-<div class="container" style="font-weight: bolder">
-  <div class="jumbotron" style="width: 50%; text-align: center; margin-top: 25px; border-color: lightslategray;  height: 100%; border-radius: 25px; border-style: solid;">
+<div class="container" style="background-image:url('../../../assets/images/services.jpg');font-weight: bolder">
+  <div class="jumbotron" style="width: 50%; text-align: center; margin-top: 25px;margin-left: 25%; border-color: lightslategray;  height: 100%;">
     <div>
       <label class="" style="margin-bottom: 25px; font-size: 25px; font-weight: bold">
         Unesite uslugu i cenu:
@@ -9,21 +9,19 @@
       <form [formGroup]="form">
         <div class="form-group">
 
-          <label style="margin-bottom: 15px;">Unesite naziv usluge:</label>
-          <input [formControl]="name" name="name" type="text" class="form-control" style="margin-left:120px;width: 250px;margin-bottom: 15px;">
+          <input placeholder="Unesite naziv usluge" [formControl]="name" name="name" type="text" class="form-control" style="margin-left:120px;width: 250px;margin-bottom: 15px;">
 
           <small class="form-text error" *ngIf="name.errors?.required && name.touched" style="color: red">
             Naziv je obavezan!
           </small>
 
-          <label style="margin-bottom: 15px;">Unesite cenu:</label>
-          <input [formControl]="price" name="price" type="text" style="margin-left:120px;width: 250px; margin-bottom: 15px;" class="form-control">
+          <input placeholder="Unesite cenu" [formControl]="price" name="price" type="text" style="margin-left:120px;width: 250px; margin-bottom: 15px;" class="form-control">
 
           <small class="form-text error" *ngIf="price.errors?.required && price.touched" style="color: red">
             Cena je obavezna!
           </small>
 
-          <button (click)="unesi()" class="btn btn-primary" [disabled]="!form.valid" style="margin-top: 15px;">Unesi</button>
+          <button (click)="unesi()" class="btn btn-success" [disabled]="!form.valid" style="margin-top: 15px;">Dodaj</button>
 
         </div>
       </form>
