--- a/src/app/components/add-destination/add-destination.component.html
+++ b/src/app/components/add-destination/add-destination.component.html
@@ -1,3 +1,48 @@
-<p>
-  add-destination works!
-</p>
+<div class="container" style="font-weight: bolder">
+  <div class="jumbotron" style="background-image:url('../../../assets/images/destination.jpg')  ;width: 50%; text-align: center; margin-top: 25px;margin-left: 25%; border-color: lightslategray;  height: 100%;">
+    <div>
+      <label class="" style="margin-bottom: 25px; font-size: 25px; font-weight: bold;color:#ffff;">
+        Unesite destinaciju:
+      </label>
+
+
+      <form [formGroup]="form">
+        <div class="form-group">
+
+          <label style="margin-bottom: 15px;">Unesite naziv aerodroma:</label>
+          <input [formControl]="name" name="name" type="text" class="form-control" style="margin-left:120px;width: 250px;margin-bottom: 15px;">
+
+          <small class="form-text error" *ngIf="name.errors?.required && name.touched" style="color: red">
+            Naziv je obavezan!
+          </small>
+
+          <label style="margin-bottom: 15px;">Unesite grad:</label>
+          <input [formControl]="city" name="city" type="text" style="margin-left:120px;width: 250px; margin-bottom: 15px;" class="form-control">
+
+
+          <small class="form-text error" *ngIf="city.errors?.required && city.touched" style="color: red">
+            Grad je obavezan!
+          </small>
+
+          <label style="margin-bottom: 15px;">Unesite skracenicu za grad:</label>
+          <input [formControl]="nick" name="nick" type="text" style="margin-left:120px;width: 250px; margin-bottom: 15px;" class="form-control">
+
+
+          <small class="form-text error" *ngIf="nick.errors?.required && nick.touched" style="color: red">
+            Skracenica je obavezna!
+          </small>
+
+
+          <label style="margin-bottom: 15px;color:#ffff;">Unesite drzavu:</label>
+          <input [formControl]="state" name="state" type="text" style="margin-left:120px;width: 250px;" class="form-control margin">
+
+
+          <small class="form-text error" *ngIf="state.errors?.required && state.touched" style="color: red">
+            Drzava je obavezna!
+          </small>
+
+          <button (click)="unesi()" class="btn btn-primary" [disabled]="!form.valid" style="margin-top: 15px;">Unesi</button>
+
+        </div>
+      </form>
+    </div>
