--- a/src/app/components/airline-profile/airline-profile.component.html
+++ b/src/app/components/airline-profile/airline-profile.component.html
@@ -1,3 +1,70 @@
-<p>
- it works!
-</p>
+<div class="container" >
+
+<div class="jumbotron" style="background-image:url('../../../assets/images/airlineProfile.jpg')  ;width: 70%; margin-top: 25px;margin-left: 20%; width: auto; display: inline-block; border-color: lightslategray;  height: auto; ">
+
+  <div style="width: 200px; display: inline-block; margin-left: 30px;">
+    <h1 style="margin-bottom: 45px;color:#ffff;"><i>{{airline.name}}</i></h1>
+    <p style="font-size: 19px;"><b>Adresa:</b> {{airline.address}}</p>
+    <p style="font-size: 19px; margin-bottom: 30px;"><b>Opis:</b> {{airline.description}}</p>
+  </div>
+
+  <div class="btnProfile" style="text-align: center; margin-left: 30px; display: inline-block; ">
+
+    <button style="  font-size: 18px; margin-bottom: 20px; margin-right: 20px;" class="btn btn-warning" (click)="details()">Letovi</button>
+
+    <button style="  font-size: 18px; margin-bottom: 20px; margin-right: 20px;"  class="btn btn-warning" (click)="destinationsDetails()">Destinacije</button>
+
+    <button style=" font-size: 18px; margin-bottom: 20px; margin-right: 20px;" class="btn btn-warning">Karte sa popustima</button>
+
+    <button style="  font-size: 18px; margin-bottom: 20px; margin-right: 120px;" (click)="showServices()" class="btn btn-warning">Usluge</button>
+  
+
+  </div>
+  <div style="display: inline-block;margin-left: 70px;">
+    <button class="btn btn-warning" (click)="showConfiguration()">Konfiguracija</button>
+
+    <ng-container *ngIf="conf" style="display: inline-block; position: fixed">
+      <ng-container *ngIf="addConf">
+        <br>
+        <label style="background-color:rgb(0,0,0,0.7); color:#ffff;">Konfugaricija za avion nije podesena. Molim vas unesite</label>
+        <br>
+        <button class="btn btn-warning" (click)="addConfiguration()">Dodaj konfiguraciju</button>
+      </ng-container>
+      <ng-container *ngIf="conf2">
+      <table style="border: solid">
+        <thead>
+        <th>
+          Grupa
+        </th>
+        <th>
+          Redovi
+        </th>
+        <th>
+          Kolone
+        </th>
+        </thead>
+        <tbody>
+<tr>
+        <td >
+          {{ airline.airlineConfiguration.arange}}
+        </td>
+
+        <td>
+          {{airline.airlineConfiguration.rowsA}}
+        </td>
+
+        <td>
+          {{airline.airlineConfiguration.columnsA}}
+        </td>
+</tr>
+        </tbody>
+      </table>
+        <button class="btn btn-primary" (click)="changeConfiguration()">Izmeni konfiguraciju</button>
+      </ng-container>
+    </ng-container>
+
+</div>
+
+</div>
+
+</div>
