--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,4 +1,89 @@
-<div class="container-fluid" style="background-image:url('../../../assets/images/room.jpg');">
+
+<div class="container-fluid">
+
+  <div class="container-fluid"  style="margin-top: 20px; display: block; float: left">
+      <div class="form-group" style="display: inline-block;">
+          <form>
+              <div class="form-row align-items-center">
+                <div class="col-auto">
+                  <label class="sr-only" for="inlineFormInput">Dolazak</label>
+                  <input name="dolazak" type="date" class="form-control mb-2" id="dolazak" [formControl] = "dolazak">
+                  <small class="form-text error" *ngIf="dolazak.errors?.required && dolazak.touched" style="color: red">
+                     Ovo polje je obavezano za unos!
+                    </small>
+                </div>
+
+                <div class="col-auto">
+                  <label class="sr-only" for="inlineFormInputGroup">Odlazak</label>
+                  <input name="odlazak" type="date" class="form-control" id="odlazak" [formControl] = "odlazak">
+                  <small class="form-text error" *ngIf="odlazak.errors?.required && odlazak.touched" style="color: red">
+                      Ovo polje je obavezano za unos!
+                     </small>
+                </div>
+
+                <div class="col-auto">
+                   <button type="submit" class="btn btn-dark" (click)="execute()" [disabled]="!form.valid">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  <button class="btn btn-dark" (click)="refresh()" style="margin-left: 0.5em"><i class="fa fa-refresh"></i></button>
+                </div>
+              </div>
+            </form>
+      </div>
+  </div>
+
+  <table class="table table-bordered" *ngIf="rooms">
+    <thead>
+      <tr>
+        <th>Tip</th>
+        <th>Kapacitet</th>
+        <th>Sprat</th>
+        <th>Balkon</th>
+        <th>Cena za noc</th>
+        <th>Cena vazi od</th>
+        <th>Cena vazi do</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let r of rooms">
+      <td>{{r.roomType}}</td>
+      <td>{{r.capacity}}</td>
+      <td>{{r.floor}}</td>
+      <td>{{r.balkon}}</td>
+      <td>{{r.costPerNight}}</td>
+      <td>{{r.costValidFrom | date: 'dd/MM/yyyy'}} </td>
+      <td>{{r.costValidUntil | date: 'dd/MM/yyyy'}}</td>
+      <td *ngIf="!r.reserved">
+        <input type="checkbox">
+        <button (click)="editRoom(r.id)"><i class="fa fa-edit"></i></button>
+        <button (click)="deleteRoom(r.id)"><i class="fa fa-trash"></i></button>
+      </td>
+
+    </tr>
+    </tbody>
+
+    <tfoot>
+    <tr>
+      <td colspan="4"></td>
+      <td colspan="2">
+        <button class="btn btn-dark">Rezervisi</button>
+        <button *ngIf="hotelId" class="btn btn-dark" (click)="addNewRoom()">Dodaj sobu</button>
+      </td>
+    </tr>
+    </tfoot>
+  </table>
+</div>
+
+
+
+
+
+
+
+
+<!--
+ class="container-fluid" style="background-image:url('../../../assets/images/room.jpg');">
   <table class="table table-dark tableRoom" *ngIf="rooms">
     <thead>
       <tr class="textRoom">
@@ -41,3 +126,4 @@
     </tfoot>
   </table>
 </div>
+-->
