--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,16 +17,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/cinemas']" [routerLinkActive]="['is-active']">Flights</a>
+            <a class="nav-link" [routerLink]="['/airlines']" [routerLinkActive]="['is-active']">Flights</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" [routerLink]="['/hotels']" [routerLinkActive]="['is-active']">Hotels</a>
             </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" [routerLink]="['/reservation']" [routerLinkActive]="['is-active']">Reservation</a>
-          </li>
+          </li>-->
           <li class="nav-item">
-            <a *ngIf="activeUser?.role==='ADMIN'" class="nav-link" href="">Settings</a>
+            <a *ngIf="activeUser?.role==='ADMIN'" class="nav-link" [routerLink]="['/system-admin/addAdmin']" [routerLinkActive]="['is-active']">Settings</a>
           </li>
           <li class="nav-item">
               <button class="nav-link btn-link" [routerLink]="['/dashboard']" (click)="deleteActUser()"  >Logout</button>
