--- a/src/app/components/register-airline/register-airline.component.html
+++ b/src/app/components/register-airline/register-airline.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="font-weight: bolder">
-  <div class="jumbotron" style="width: 50%; text-align: center; margin-top: 25px; border-color: lightslategray;  height: 100%; border-radius: 25px; border-style: solid;">
+  <div class="jumbotron" style="background-image:url('../../../assets/images/addFlight.jpg');width: 50%; margin-left: 25%;text-align: center; margin-top: 25px; background-color: blue;  height: 100%;">
     <div>
       <label class="" style="margin-bottom: 25px; font-size: 25px; font-weight: bold">
         Nova aviokompanija:
