--- a/src/app/components/hotel-profile/hotel-profile.component.html
+++ b/src/app/components/hotel-profile/hotel-profile.component.html
@@ -62,7 +62,7 @@
         </a>
       </div>
       <div class="col-lg-6">
-        <a class="portfolio-item" href="#">
+        <a class="portfolio-item" (click)="displayReservation()">
           <span class="caption">
             <span class="caption-content">
               <h1 class="text-secondary mb-0">Rezervacija</h1>
