--- a/src/app/components/listhotel/listhotel.component.html
+++ b/src/app/components/listhotel/listhotel.component.html
@@ -35,7 +35,7 @@
 
 
 <div class="container">
-    <button *ngIf="activeUser&&activeUser?.role==='ADMIN'" type="button" [routerLink]="['/addHotel']" [routerLinkActive]="['is-active']" class="btn btn-primary btn-lg btn-block cardBtn">Add Hotel</button>
+    <button *ngIf="activeUser&&activeUser?.role==='ADMIN'" type="button" [routerLink]="['/addHotel']" [routerLinkActive]="['is-active']" class="btn btn-primary btn-lg btn-block cardBtn">Dodaj Hotel</button>
     <div *ngFor="let hotel of hotels | sorting:orderBy:asc | serach:searchText " class="row hotelCard" >
                 <div class="col-md-3 cardInline">
                         <img  width="220px" hight="170:" src="../../../assets/images/hotelIcon.png" alt="theatre {{hotel.name}}">
@@ -45,8 +45,8 @@
                     <p class="list-group-item-text">"<i>{{hotel.desc}}"</i> </p>
                 </div>
                 <div class="col-md-3 text-center cardInline">
-                    <button type="button" [routerLink]="['/hotels/',hotel.id]" class="btn btn-primary btn-lg btn-block cardBtn">Details</button>
-                    <p><i class="fas fa-star"></i> Average 4.1 <small> / </small> 5 </p>
+                    <button type="button" [routerLink]="['/hotels/',hotel.id]" class="btn btn-primary btn-lg btn-block cardBtn">Detaljnije</button>
+                    <p><i class="fas fa-star"></i> Ocena 4.1 <small> / </small> 5 </p>
                     <p><i class="fas fa-location-arrow"></i> {{hotel.address}} , {{hotel.city}} , {{hotel.country}}</p>
                 </div>
     </div>
